--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +20,13 @@
     "prisma": "4.11.0",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.31.0"
   },
   "dependencies": {
     "@prisma/client": "4.11.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "4.14.1",
     "zod": "3.21.4"
